# cmd/docs/swagger.json
@@ -10,19 +10,49 @@
         },
         "version": "1.0"
     },
-    "host": "localhost",
-    "basePath": "/api/v1",
     "paths": {
-        "/accounts/get": {
+        "/account/get": {
             "post": {
-                "description": "get or Register account by ID, ID에 -1을 넘기면 계정 생성",
+                "description": "account 조회 및 생성 ID -1 로 요청시 account 생성 후 ID 반환",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "account"
                 ],
-                "summary": "get an account",
+                "summary": "account 조회 및 생성",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "ID",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/account.Account"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/profile/get": {
+            "post": {
+                "description": "Account ID로 profile 조회",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile"
+                ],
+                "summary": "profile 조회",
                 "parameters": [
                     {
                         "type": "integer",
@@ -36,51 +66,25 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "Account"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/profile.Profile"
+                            }
                         }
                     }
                 }
             }
         },
-        "/profiles/get": {
+        "/profile/set": {
             "post": {
-                "description": "get profile by ID",
+                "description": "Account ID로 profile 등록",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "profiles"
+                    "profile"
                 ],
-                "summary": "get an profile",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Account ID",
-                        "name": "ID",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "Profile"
-                        }
-                    }
-                }
-            }
-        },
-        "/profiles/set": {
-            "post": {
-                "description": "set profile by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "profiles"
-                ],
-                "summary": "set an profile",
+                "summary": "profile 등록",
                 "parameters": [
                     {
                         "type": "integer",
@@ -101,9 +105,55 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "Profile"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/profile.Profile"
+                            }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "account.Account": {
+            "type": "object",
+            "properties": {
+                "appleID": {
+                    "type": "string"
+                },
+                "deviceID": {
+                    "type": "string"
+                },
+                "googleID": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 5373899369873408
+                },
+                "kakaoID": {
+                    "type": "string"
+                },
+                "lineID": {
+                    "type": "string"
+                },
+                "registerTimestamp": {
+                    "type": "integer",
+                    "example": 1639056738
+                }
+            }
+        },
+        "profile.Profile": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 5373899369873408
+                },
+                "nickname": {
+                    "type": "string",
+                    "example": "myNickname"
                 }
             }
         }
